@@ -3,6 +3,7 @@ SUMMARY OF NEW FEATURES AND BUG FIXES SINCE V4.0
 ============================================================================
 
 Version 6.0.8 - not yet released
+* don't estimate thermal source for skewed thermals
 * devices
   - CAI302: fix task declaration on Android
 * Linux
